Dosage 2.8 (released xx.xx.2013)

Features:
- comics: Added image text saving for comic strips.
  Used in xkcd comics to store the image title text.
  Closes: GH bug #42

Fixes:
- comics: Fixed ForLackOfABetterComic.


Dosage 2.7 (released 24.11.2013)

Fixes:
- comics: Fixed GoComic image URL matcher.
- comics: Fixed AxeCop, PensAndTales_FireflyCross.
- comics: Remove broken ComicFury_Rosie, InsideOut, SodiumEyes.


Dosage 2.6 (released 12.11.2013)

Features:
- comics: Added DarthsAndDroid
- docs: Document how to add new comics in docs/adding_new_comics.txt
  Closes: GH bug #39

Fixes:
- comics: Fixed all DrunkDuckk comics since the domain has moved.
- comics: Fixed AllTheGrowingThings, AxeCop, BookOfBiff, BroodHollow,
  Carciphona, CatAndGirl, CatsAndCameras, ChainsawSuit, ElGoonishShive,
  EvilInc, Garanos, GleefulNihilism, LeastICouldDo, MysteriesOfTheArcana,
  NineteenNinetySeven, NoNeedForBushido, Oglaf, OneQuestion,
  OverCompensating, ScenesFromAMultiverse, Shivae, Spinnerette,
  Wigu, Wonderella, Wulffmorgenthaler
  Closes: GH bug #41
- comics: Removed broken AetheriaEpics, ChuckBrain, Fallen, HMHigh,
  IanJay, InsideOut, Nodwick, WebcomicsNation_ClownSamurai

Changes:
- cmdline: Display genres in module help (dosage -m).


Dosage 2.5 (released 18.7.2013)

Features:
- comics: Added EatLiver, ICanBarelyDraw, JimBenton, MarriedToTheSea
  and NatalieDee.
  Closes: GH bug #37

Fixes:
- comics: Fixed AxeCop, GoblinsComic, KevinAndKell and other comics.


Dosage 2.4 (released 24.6.2013)

Features:
- comics: Added LinuxComFridayFunnies and OnTheFasttrack.

Fixes:
- cmdline: The --continue option fetched only one image.
  Closes: GH bug #32


Dosage 2.3 (released 26.5.2013)

Features:
- scripts: Added script to create a CBZ archive for a given comic
  directory.

Fixes:
- comics: Fix LookingForGroup and other comics.
  Closes: GH bug #31


Dosage 2.2 (released 30.4.2013)

Features:
- comics: Added ARedTailsDream, Carciphona, Curtailed, GirlGenius,